Fix startup config error and add /bookimage create URL flow