@@ -1,6 +1,5 @@
 package com.hazer.bookimage.command;
 
-import com.hazer.bookimage.BookImagePlugin;
 import com.hazer.bookimage.service.BookImageService;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandExecutor;
@@ -8,6 +7,7 @@ import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabCompleter;
 import org.bukkit.entity.Player;
 
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
@@ -15,7 +15,7 @@ public class BookImageCommand implements CommandExecutor, TabCompleter {
 
     private final BookImageService bookImageService;
 
-    public BookImageCommand(BookImagePlugin plugin, BookImageService bookImageService) {
+    public BookImageCommand(BookImageService bookImageService) {
         this.bookImageService = bookImageService;
     }
 
@@ -31,12 +31,32 @@ public class BookImageCommand implements CommandExecutor, TabCompleter {
             return true;
         }
 
-        bookImageService.convertBookInHandAsync(player, null);
+        if (args.length == 0) {
+            // Legacy behavior: convert URL text in currently held book.
+            bookImageService.convertBookInHandAsync(player, null);
+            return true;
+        }
+
+        if (args.length >= 2 && args[0].equalsIgnoreCase("create")) {
+            String url = args[1];
+            bookImageService.giveImageBookFromUrlAsync(player, url);
+            return true;
+        }
+
+        player.sendMessage("§eИспользование:");
+        player.sendMessage("§7/bookimage §f- конвертировать URL в книге в руке");
+        player.sendMessage("§7/bookimage create <url> §f- создать готовую книгу с картинкой (использует 1 книгу с пером)");
         return true;
     }
 
     @Override
     public List<String> onTabComplete(CommandSender sender, Command command, String alias, String[] args) {
-        return Collections.emptyList();
+        if (args.length == 1) {
+            return List.of("create");
+        }
+        if (args.length == 2 && args[0].equalsIgnoreCase("create")) {
+            return Collections.singletonList("https://example.com/image.png");
+        }
+        return new ArrayList<>();
     }
 }
